--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://github.com/zobedadewan/weather-app",
-  "name": "weather-app",
+  "homepage": "https://zobedadewan.github.io/weather-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
